fixed language dropdown children from overflowing off window

--- a/_sass/theme_scss/_nav.scss
+++ b/_sass/theme_scss/_nav.scss
@@ -1,93 +1,102 @@
 //nav
+
 .navbar-toggler {
 	//toggle hamburger icon with close icon
 	.fa-bars {
 		display: none;
 	}
+
 	.fa-times {
 		display: block;
 	}
+
 	&.collapsed {
 		.fa-bars {
 			display: block;
 		}
+
 		.fa-times {
 			display: none;
 		}
 	}
 }
+
 .navbar-dark {
 	padding: 0 1rem;
 	background: $rr-blue09;
-	.navbar-brand{
+
+	.navbar-brand {
 		margin-right: 40px;
 		font-size: 1.15rem;
 	}
-	.navbar-nav{
+
+	.navbar-nav {
 		width: 100%;
-		.nav-item{
+
+		.nav-item {
 			.nav-link {
-			    color: #fff;
-			    font-size: 14px;
-			    text-transform: uppercase;
-			    font-family: 'Montserrat';
-			    font-weight: 400;
-			    letter-spacing: .01em;
-			    padding: 20px 15px;
+				color: #fff;
+				font-size: 14px;
+				text-transform: uppercase;
+				font-family: 'Montserrat';
+				font-weight: 400;
+				letter-spacing: 0.01em;
+				padding: 20px 15px;
 			}
 
-			&.dropdown{
+			&.dropdown {
 				right: 0;
+				width: 160px;
 				position: absolute;
-				@media(max-width: 1200px){
-    				.hide-language {
-							display: none;
-						}
+				@media(max-width: 1200px) {
+					.hide-language {
+						display: none;
+					}
 				}
-				@media(max-width: 991px){
+				@media(max-width: 991px) {
 					display: block;
 					position: relative;
 					width: 100%;
 					top: 0;
 				}
 
-				.nav-link{
+				.nav-link {
 					background: $rr-gray50;
 					color: $rr-black;
-					@media(max-width: 991px){
+					@media(max-width: 991px) {
 						padding: 10px;
 					}
-
 				}
-				.dropdown-menu{
-				    border-radius: 0;
-				    margin: 0;
-				    padding: 0;
-				    border: 0;
-				    width: 100%;
 
-				    a{
-				    	color: $rr-mid-blue;
-				    	&:hover{
-				    		background: lighten($rr-gray50, 5%);
-				    		color: $rr-blue;
-				    	}
-				    	&.disabled{
+				.dropdown-menu {
+					border-radius: 0;
+					margin: 0;
+					padding: 0;
+					border: 0;
+					width: 100%;
+
+					a {
+						color: $rr-mid-blue;
+
+						&:hover {
+							background: lighten($rr-gray50, 5%);
+							color: $rr-blue;
+						}
+
+						&.disabled {
 							color: #333;
-							&:hover{
+
+							&:hover {
 								background: $rr-gray50;
 								color: $rr-black;
-
 							}
 						}
-				    }
+					}
 				}
 			}
 
-
-
-			&.make-a-payment{
-				.nav-link{
+			&.make-a-payment {
+				.nav-link {
 					background: $rr-green;
 					color: $rr-black;
 					margin: 10px 0;
@@ -97,16 +106,36 @@
 		}
 	}
 }
-
-@media(max-width: 991px){
-	.navbar-top{
+@media(max-width: 991px) {
+	.navbar-top {
 		width: 100%;
-		.navbar-toggler{
+
+		.navbar-toggler {
 			float: right;
 			border: 0;
 			color: #fff;
 			padding: 10px 0;
-
 		}
 	}
+}
+@media(max-width: 1200px) and (min-width: 992px) {
+	.navbar-dark {
+		padding-right: 0;
+	}
+
+	.dropdown {
+		flex-grow: 1;
+		align-self: flex-end;
+		#dropdownMenuLink {
+			display: inline-block;
+			align-self: flex-end;
+			position: fixed;
+			top: 0;
+			right: 0;
+		}
+	}
+}
+
+.navbar-dark .navbar-nav .nav-item.dropdown .dropdown-menu a {
+    text-align: center;
 }
